--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.kingdew.pos3">
-    <uses-permission android:name="android.permission.INTERNET"/>
+
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -10,7 +11,8 @@
         android:roundIcon="@drawable/ic_baseline_shopping_bag_24"
         android:supportsRtl="true"
         android:theme="@style/Theme.Pos3">
-        <activity android:name=".resetpass"></activity>
+        <activity android:name=".MainActivity2"></activity>
+        <activity android:name=".resetpass" />
         <activity android:name=".User_profile" />
         <activity android:name=".profile" />
         <activity android:name=".abount" />
