--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,13 +6,12 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/ic_baseline_shopping_bag_24"
+        android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:roundIcon="@drawable/ic_baseline_shopping_bag_24"
+        android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Pos3">
-        <activity android:name=".MainActivity2"></activity>
-        <activity android:name=".resetpass" />
+
         <activity android:name=".User_profile" />
         <activity android:name=".profile" />
         <activity android:name=".abount" />
@@ -31,7 +30,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".register" />
+
         <activity android:name=".login" />
         <activity android:name=".home" />
     </application>
